--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 .container{
     padding: 10px 10%;
     
+    
 }
 nav{
     display: flex;
@@ -49,6 +50,7 @@ nav ul li a:hover::after{
 .header-text{
     margin-top: 20%;
     font-size: 30px;
+    
 }
 .header-text h1{
     margin-top: 20px;
@@ -84,7 +86,8 @@ nav ul li a:hover::after{
 }
 .tab-titles{
     display: flex;
-    margin: 20px 0 40px 40px;
+    flex-direction: row;
+    justify-content: center;
     font-size: 30px;
     
 }
@@ -107,6 +110,9 @@ nav ul li a:hover::after{
 }
 .tab-links.active-link::after{
     width:75%;
+}
+.tab-contents ul {
+    text-align: center;
 }
 .tab-contents ul li {
     list-style: none;
@@ -172,6 +178,7 @@ nav ul li a:hover::after{
     align-items: center;
     padding-top: 50px;
     width: auto;
+    padding-left: 150px;
 }
 
 .col1{
@@ -189,8 +196,8 @@ nav ul li a:hover::after{
 }
 
 #image-container {
-    width: 500px;
-    height: 500px;
+    width: 640px;
+    height: 360px;
     transition: opacity 0.5s ease-in-out , transform 0.5s;
     border-radius: 10px;
     
@@ -398,7 +405,7 @@ nav .fas{
     padding: 80px auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     margin-top: 100px;
 }
@@ -419,10 +426,12 @@ nav .fas{
 }
 .tab-titles{
     display: flex;
-    margin: 20px 10%;
+    flex-direction: row;
+    justify-content: center;
     font-size: 20px;
-    padding-left: 50px;
-    
+    margin-left: 10%;
+    margin-top: 20px;
+     
 }
 .tab-links {
     margin-right: 50px;
@@ -445,11 +454,12 @@ nav .fas{
     width:75%;
 }
 
+
 .tab-contents ul li {
     list-style: none;
     margin:10px 0;
-    font-size: 20px;
-    padding-inline:20px;
+    font-size: 10px;
+    padding-inline:20%;
 }
 
 .tab-contents{
@@ -512,6 +522,7 @@ nav .fas{
     align-items: center;
     margin-top: -70px;
     width: 100%;
+    padding-left: 0;
 }
 
 .col1{
@@ -530,9 +541,10 @@ nav .fas{
 
 #image-container {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     transition: opacity 0.5s ease-in-out , transform 0.5s;
     border-radius: 10px;
+    
     
 }
 .work{
@@ -541,6 +553,7 @@ nav .fas{
     overflow: hidden;
     object-fit: fit;
     margin-right: 0;
+    padding-inline:10%;
 }
 .work:hover #image-container{
     transform: scale(1.1);
